# TinyGrad

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
notebooks/: backpropagation_example.ipynb  example_neural_network.ipynb  linear_nnet.ipynb
src/gradlite/core/: __init__.py
src/gradlite/nn/: linear.py  module.py
src/gradlite/nn/activations/: __init__.py  identity.py  relu.py
src/gradlite/nn/loss/: mae.py  mse.py
src/gradlite/optimizer/: __init__.py  base.py  sgd.py
src/gradlite/viz/: __init__.py
src/tinygrad/core/: __init__.py  parameter.py
src/tinygrad/nn/: linear.py  module.py
src/tinygrad/nn/activations/: __init__.py  identity.py  relu.py
src/tinygrad/nn/loss/: mae.py  mse.py
src/tinygrad/optimizer/: __init__.py  base.py  sgd.py
