[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "tinygrad"
version = "0.1.0"
description = "A simple module that implements automatic gradient computation"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Raúl Barba Rojas", email = "barbarojasraul@gmail.com"}
]
license = "MIT"
keywords = ["autograd", "grad", "backpropagation", "neural networks"]
dependencies = []

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/tinygrad"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
]
