[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "tinygrad"
version = "0.2.0"
description = "A tiny, elegant automatic differentiation engine built from scratch."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Raúl Barba Rojas", email = "barbarojasraul@gmail.com"}
]
license = "MIT"
keywords = ["tinygrad", "autograd", "grad", "backpropagation", "neural networks"]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/tinygrad"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
]
