[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "gradlite"
version = "0.2.0"
description = "A tiny, elegant automatic differentiation engine built from scratch."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Raúl Barba Rojas", email = "barbarojasraul@gmail.com"}
]
license = { file = "LICENSE.txt" }
keywords = ["gradlite", "autograd", "grad", "backpropagation", "neural networks"]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/gradlite"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "twine>=6.2.0",
]
